--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,16 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: "Satoshi", sans-serif;
   font-weight: bold;
+  scrollbar-width: none;
+  -ms-overflow-style: none; /* IE 10+ */
 }
 
-::-webkit-scrollbar {
-  display: none;
+body::-webkit-scrollbar {
+  display: none; /* Hide scrollbar on Chrome, Safari, and Opera */
 }
 
 a {
@@ -24,6 +41,11 @@ button {
 
 * {
   box-sizing: border-box;
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 @media (prefers-color-scheme: dark) {
